NakupovalniSeznam/k8s/frontend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: nakupovalko
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: docker.io/hocevaran/fe:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: registry-secret

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: nakupovalko
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
