NakupovalniSeznam/k8s/shoppinglist-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoppinglist
  namespace: nakupovalko
spec:
  selector:
    app: shoppinglist
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: ClusterIP
