NakupovalniSeznam/k8s/shoppinglist-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoppinglist-ingress
  namespace: nakupovalko
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: shoppinglist.local
      http:
        paths:
          - path: /api/shopping-lists
            pathType: Prefix
            backend:
              service:
                name: shoppinglist
                port:
                  number: 8090
